syntax = "proto3";

option csharp_namespace = "FashionShop.ProductService.Protos";

service GrpcProduct{
	rpc GetQuantity(ProductRequest) returns (InventoryResponse);
}
message ProductRequest{
	string ProductId = 1;
}
message InventoryResponse{
	string InventoryId = 1;
	string ProductId = 2;
	int32 Quantity = 3;
}